// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ErrorMessage > should match the snapshot - visuallyHiddenText 1`] = `
<span
  class="nhsuk-error-message"
  data-testid="error-message"
>
  <span
    class="nhsuk-u-visually-hidden"
  >
    Custom
    :
  </span>
  This is an error
</span>
`;

exports[`ErrorMessage > should match the snapshot 1`] = `
<span
  class="nhsuk-error-message"
  data-testid="error-message"
>
  <span
    class="nhsuk-u-visually-hidden"
  >
    Error
    :
  </span>
  This is an error
</span>
`;
